JABERA-5 tests fixed